--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <Button
@@ -12,10 +13,26 @@
         android:text="@string/title_activity_products" />
 
     <Button
-        android:layout_below="@id/goToProducts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/goToCustomers"
-        android:text="@string/title_activity_customers" />
+        android:text="@string/title_activity_customers"
+        />
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/lstWaitingOrders"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@+id/lastCustomers"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/empty_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:text="@string/no_data"/>
+
+</LinearLayout>
