--- a/app/src/main/res/menu/menu_order.xml
+++ b/app/src/main/res/menu/menu_order.xml
@@ -5,4 +5,7 @@
 
     <item android:id="@+id/action_save" android:title="@string/action_save"
         app:showAsAction="always" android:icon="@android:drawable/ic_menu_save" />
+
+    <item android:id="@+id/action_send" android:title="@string/action_send"
+        app:showAsAction="always" android:icon="@android:drawable/ic_menu_send" />
 </menu>
