--- a/app/src/main/res/menu/menu_customer_details.xml
+++ b/app/src/main/res/menu/menu_customer_details.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="it.aeg2000srl.aeron.views.CustomerDetailsActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_orders_waiting" android:title="@string/title_activity_waiting_orders"
+        android:orderInCategory="100" app:showAsAction="always"
+        android:icon="@android:drawable/ic_popup_reminder" />
+
+    <item android:id="@+id/action_orders_history" android:title="@string/title_activity_orders_history"
+        android:orderInCategory="101" app:showAsAction="never" />
+
+    <!--<item android:id="@+id/action_orders_waiting" android:title="@string/title_activity_orders_history"-->
+        <!--android:orderInCategory="101" app:showAsAction="never" />-->
 </menu>
