--- a/app/src/main/res/layout/activity_waiting_orders.xml
+++ b/app/src/main/res/layout/activity_waiting_orders.xml
@@ -1,10 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="it.aeg2000srl.aeron.views.WaitingOrdersActivity">
+
+
+    <TextView
+        android:id="@+id/txtCustomerName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:padding="1dp"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        />
 
     <ListView
         android:id="@+id/lstWaitingOrders"
@@ -17,4 +29,4 @@
         android:visibility="gone"
         android:text="@string/no_data"/>
 
-</RelativeLayout>
+</LinearLayout>
