--- a/app/src/main/res/layout/favorite_products.xml
+++ b/app/src/main/res/layout/favorite_products.xml
@@ -6,15 +6,10 @@
     android:background="#ffffff"
     >
 
-    <TextView
-        android:id="@+id/txtName"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="60px"
-        android:padding="1dp"
-        android:textSize="20sp"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        />
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/star_big_on" />
 
     <CheckBox
         android:id="@+id/checkBox1"
@@ -22,5 +17,14 @@
         android:layout_height="wrap_content"
         android:focusable="false"
         android:focusableInTouchMode="false" />
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="wrap_content"
+        android:layout_height="60px"
+        android:padding="1dp"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        />
 
 </LinearLayout>
