--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -17,11 +17,19 @@
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
-        android:layout_height="60px"
+        android:layout_height="60dp"
         android:padding="1dp"
         android:textSize="20sp"
         android:textColor="#000000"
-        android:background="#ffffff"
+        />
+
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:padding="1dp"
+        android:textSize="20sp"
+        android:textColor="#000000"
         />
 
 </LinearLayout>
