--- a/app/src/main/res/layout/customers.xml
+++ b/app/src/main/res/layout/customers.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#ffffff"
+    android:padding="10dp"
     >
 
     <ImageView
@@ -17,11 +17,10 @@
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
-        android:layout_height="60px"
+        android:layout_height="wrap_content"
         android:padding="1dp"
         android:textSize="20sp"
         android:textColor="#000000"
-        android:background="#ffffff"
         />
 
 </LinearLayout>
