--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#ffffff"
+    android:padding="10dp"
     >
 
-    <ImageView
-        android:id="@+id/icon"
-        android:padding="0dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/presence_online"
-        />
+    <!--<ImageView-->
+        <!--android:id="@+id/icon"-->
+        <!--android:padding="0dip"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@android:drawable/presence_online"-->
+        <!--/>-->
 
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:padding="1dp"
         android:textSize="20sp"
         android:textColor="#000000"
@@ -26,10 +26,13 @@
     <TextView
         android:id="@+id/txtPrice"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:padding="1dp"
-        android:textSize="20sp"
-        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textColor="#0c0c0c"
+        android:layout_toLeftOf="@id/txtName"
+        android:layout_alignParentEnd="true"
         />
 
-</LinearLayout>
+
+</RelativeLayout>
