--- a/app/src/main/res/layout/discounted_product_dialog.xml
+++ b/app/src/main/res/layout/discounted_product_dialog.xml
@@ -11,11 +11,13 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:textSize="20sp"
             android:text="Prezzo: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -30,22 +32,28 @@
         android:paddingBottom="20dp" >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Sconto"
             android:layout_gravity="center_vertical"
             android:id="@+id/textView" />
 
         <NumberPicker
+            android:textSize="20sp"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/numDiscountValue" />
+            android:id="@+id/numDiscountValue"
+            android:layout_gravity="center_horizontal" />
 
         <RadioGroup
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical">
+
             <RadioButton
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="€"
@@ -53,6 +61,7 @@
                 android:checked="true"/>
 
             <RadioButton
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/rbPercentDiscount"
@@ -67,12 +76,14 @@
         android:paddingBottom="20dp">
 
         <TextView
-            android:text="Nuovo Prezzo: "
+            android:textSize="20sp"
+            android:text="Prezzo scontato: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_width="fill_parent"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:id="@+id/txtDiscountedPrice"/>
@@ -85,6 +96,7 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:textSize="20sp"
                 android:id="@+id/dialogButtonOK"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -94,10 +106,11 @@
                 />
 
             <Button
+                android:textSize="20sp"
                 android:id="@+id/dialogButtonCancel"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" Cancel "
+                android:text=" Annulla "
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_toRightOf="@+id/dialogButtonOK"
