--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -10,7 +10,7 @@
     <ListView
         android:id="@+id/customersList"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content" />
 
     <TextView android:id="@+id/empty_list"
         android:layout_width="match_parent"
