--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,177 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <!--ROW-->
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:id="@+id/goToProducts"
-        android:text="@string/title_activity_products" />
+        android:layout_width="fill_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
+        <!--COLUMN-->
+        <RelativeLayout
+            android:clickable="true"
+            android:background="@android:color/holo_orange_dark"
+            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:id="@+id/goToProducts"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/categoria_image_1"
+                android:src="@android:drawable/ic_dialog_alert"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
+            <TextView
+                android:text="@string/title_activity_products"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:gravity="center"
+                android:layout_below="@+id/categoria_image_1"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"/>
+
+            <!--<Button-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/goToProducts"-->
+                <!--android:text="@string/title_activity_products" />-->
+
+            <!--<Button-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/goToCustomers"-->
+                <!--android:text="@string/title_activity_customers"-->
+                <!--/>-->
+
+        </RelativeLayout>
+        <!--END COLUMN-->
+
+        <!--COLUMN-->
+        <RelativeLayout
+            android:background="@android:color/holo_purple"
+            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:id="@+id/goToCustomers"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/categoria_image_2"
+                android:src="@android:drawable/ic_dialog_alert"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
+            <TextView
+                android:text="@string/title_activity_customers"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:gravity="center"
+                android:layout_below="@+id/categoria_image_2"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"/>
+        </RelativeLayout>
+        <!--END COLUMN-->
+
+    </LinearLayout>
+    <!--END ROW-->
+
+    <!--ROW-->
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:id="@+id/goToCustomers"
-        android:text="@string/title_activity_customers"
-        />
-
-    <ListView
-        android:id="@+id/lstWaitingOrders"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    <ListView
-        android:id="@+id/lastCustomers"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        <!--COLUMN-->
+        <RelativeLayout
+            android:clickable="true"
+            android:background="@android:color/holo_blue_bright"
+            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
 
-    <TextView android:id="@+id/empty_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:text="@string/no_data"/>
+            <ImageView
+                android:id="@+id/categoria_image_3"
+                android:src="@android:drawable/ic_dialog_alert"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
+            <TextView
+                android:text="PIZZA"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:gravity="center"
+                android:layout_below="@+id/categoria_image_3"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"/>
+
+
+        </RelativeLayout>
+        <!--END COLUMN-->
+
+        <!--COLUMN-->
+        <RelativeLayout
+            android:background="@android:color/holo_green_light"
+            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/categoria_image_4"
+                android:src="@android:drawable/ic_dialog_alert"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
+            <TextView
+                android:text="BARONE"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:gravity="center"
+                android:layout_below="@+id/categoria_image_4"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"/>
+        </RelativeLayout>
+        <!--END COLUMN-->
+
+    </LinearLayout>
+    <!--END ROW-->
+
+
+    <!--<ListView-->
+        <!--android:id="@+id/lstWaitingOrders"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <!--<ListView-->
+        <!--android:id="@+id/lastCustomers"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <!--<TextView android:id="@+id/empty_list"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:visibility="gone"-->
+        <!--android:text="@string/no_data"/>-->
 
 </LinearLayout>
