--- a/app/src/main/res/layout/favorite_products.xml
+++ b/app/src/main/res/layout/favorite_products.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#ffffff"
+    android:padding="10dp"
     >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/star_big_on" />
-
     <CheckBox
+        android:layout_alignParentStart="true"
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
         android:focusableInTouchMode="false" />
 
+    <ImageView
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/star_big_on"
+        android:layout_toLeftOf="@id/checkBox1"/>
+
     <TextView
+        android:layout_toEndOf="@id/checkBox1"
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
-        android:layout_height="60px"
+        android:layout_height="wrap_content"
         android:padding="1dp"
         android:textSize="20sp"
-        android:textColor="#000000"
-        />
+        android:textColor="#000000" />
 
-</LinearLayout>
+</RelativeLayout>
