--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -6,13 +6,13 @@
     android:padding="10dp"
     >
 
-    <!--<ImageView-->
-        <!--android:id="@+id/icon"-->
-        <!--android:padding="0dip"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@android:drawable/presence_online"-->
-        <!--/>-->
+    <ImageView
+        android:id="@+id/icon"
+        android:padding="0dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_product"
+        />
 
     <TextView
         android:id="@+id/txtName"
