--- a/app/src/main/res/layout/activity_customer_details.xml
+++ b/app/src/main/res/layout/activity_customer_details.xml
@@ -5,6 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    style="@style/DefaultActivity"
     tools:context="it.aeg2000srl.aeron.views.CustomerDetailsActivity">
 
     <TextView
