Seventh commit - ok su tablet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,9 +76,8 @@
             android:layout_height="100dp"
             android:text="@string/clienti"
             android:background="@android:drawable/dialog_holo_light_frame"
-            android:backgroundTint="@color/bluardo"
+            android:backgroundTint="@color/grigetto"
             android:drawableLeft="@drawable/ic_customers"
-            android:backgroundTintMode="add"
             android:gravity="center_vertical|start"
             android:textAlignment="gravity"
             android:typeface="sans"
@@ -93,6 +92,7 @@
             android:text="@string/prodotti"
             android:background="@android:drawable/dialog_holo_light_frame"
             android:drawableLeft="@drawable/ic_product"
+            android:backgroundTint="@color/verdino"
             android:gravity="center_vertical|start"
             android:textAlignment="gravity"
             android:typeface="sans"
@@ -107,9 +107,8 @@
             android:text="@string/ordini_in_attesa"
             android:textAlignment="gravity"
             android:background="@android:drawable/dialog_holo_light_frame"
-            android:backgroundTint="@color/verdino"
             android:drawableLeft="@drawable/ic_orders"
-            android:backgroundTintMode="add"
+            android:backgroundTint="@color/bluardo"
             android:gravity="center_vertical|start"
             android:typeface="sans"
             android:paddingStart="20dp"
@@ -125,7 +124,6 @@
             android:background="@android:drawable/dialog_holo_light_frame"
             android:backgroundTint="@color/giallastro"
             android:drawableLeft="@drawable/ic_message"
-            android:backgroundTintMode="add"
             android:gravity="center_vertical|start"
             android:typeface="sans"
             android:paddingStart="20dp"
