--- a/app/src/main/res/layout/customers.xml
+++ b/app/src/main/res/layout/customers.xml
@@ -11,7 +11,7 @@
         android:padding="0dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_myplaces"
+        android:src="@drawable/ic_customer"
         />
 
     <TextView
