--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -18,7 +18,7 @@
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="1dp"
+        android:paddingStart="40dp"
         android:textSize="20sp"
         android:textColor="#000000"
         />
