--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
             android:typeface="sans"
             android:paddingStart="20dp"
             android:singleLine="true"
+            android:visibility="gone"
             android:textSize="25sp" />
 
     </LinearLayout>
