--- a/app/src/main/res/layout/cart_item_dialog.xml
+++ b/app/src/main/res/layout/cart_item_dialog.xml
@@ -18,14 +18,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <!--<EditText-->
-            <!--android:id="@+id/txtQty"-->
-            <!--android:layout_width="80dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textColor="#000"-->
-            <!--android:hint="@string/quantity"-->
-            <!--android:inputType="number"-->
-            <!--/>-->
         <NumberPicker
             android:id="@+id/txtQty"
             android:layout_width="wrap_content"
@@ -43,8 +35,8 @@
             android:id="@+id/txtDiscount"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:textColor="#000"
             android:visibility="invisible"
+            android:textColor="#000"
             android:hint="@string/discount"/>
 
         <LinearLayout
@@ -65,10 +57,9 @@
                 android:id="@+id/dialogButtonCancel"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text=" Cancel "
+                android:text=" ELIMINA "
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_toRightOf="@+id/dialogButtonOK"
                 />
 
         </LinearLayout>
