--- a/app/src/main/res/layout/favorite_products.xml
+++ b/app/src/main/res/layout/favorite_products.xml
@@ -11,6 +11,8 @@
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:enabled="false"
         android:focusable="false"
         android:focusableInTouchMode="false" />
 
