--- a/app/src/main/res/layout/orders_waiting.xml
+++ b/app/src/main/res/layout/orders_waiting.xml
@@ -9,7 +9,7 @@
         android:padding="0dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/presence_away"
+        android:src="@android:drawable/ic_menu_recent_history"
         />
 
     <TextView
