--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -9,29 +9,49 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="it.aeg2000srl.aeron.views.OrderActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!--<android.support.design.widget.FloatingActionButton-->
+                <!--android:id="@+id/btnAddItem"-->
+                <!--android:src="@android:drawable/ic_input_add"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="bottom|end" />-->
+
+            <TextView
+                android:visibility="invisible"
+                android:id="@+id/txtCustomerName"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+
+            <ListView
+                android:id="@+id/lstItems"
+                android:layout_width="fill_parent"
+                android:longClickable="true"
+                android:layout_height="wrap_content" />
+
+            <TextView android:id="@+id/empty_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="@string/no_products_in_order"/>
+        </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btnAddItem"
-            android:src="@android:drawable/ic_input_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end" />
-
-        <TextView
-            android:id="@+id/txtCustomerName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="20sp" />
-
-        <ListView
-            android:id="@+id/lstItems"
-            android:layout_width="fill_parent"
-            android:longClickable="true"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:src="@android:drawable/ic_input_add"/>
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
