--- a/app/src/main/res/layout/order_items.xml
+++ b/app/src/main/res/layout/order_items.xml
@@ -6,6 +6,7 @@
     android:padding="15dp"
     >
 
+
         <TextView
             android:id="@+id/txtQty"
             android:layout_width="wrap_content"
@@ -13,6 +14,7 @@
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="#000000"
+            android:gravity="start"
             />
 
         <TextView
@@ -22,7 +24,17 @@
             android:layout_marginStart="10dp"
             android:textSize="20sp"
             android:textColor="#000000"
+            android:gravity="start"
             />
 
+        <TextView
+            android:id="@+id/txtDiscount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:gravity="end"
+            android:textSize="20sp"
+            android:textColor="#000000"
+        />
 
     </LinearLayout>
