--- a/app/src/main/res/layout/pricelist.xml
+++ b/app/src/main/res/layout/pricelist.xml
@@ -5,13 +5,32 @@
     android:orientation="horizontal"
     android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/icon"
+        android:padding="0dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_view"
+        />
+
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="1dp"
         android:textSize="20sp"
+        android:layout_toRightOf="@+id/icon"
         android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="1dp"
+        android:textSize="16sp"
+        android:textColor="#a5a5a5"
+        android:textStyle="normal"
+        android:layout_toLeftOf="@+id/txtDiscountedPrice" />
 
     <TextView
         android:id="@+id/txtDiscountedPrice"
@@ -19,6 +38,8 @@
         android:layout_height="wrap_content"
         android:padding="1dp"
         android:textSize="16sp"
+        android:textStyle="bold"
+
         android:textColor="#0c0c0c"
         android:layout_alignParentEnd="true" />
 
@@ -28,15 +49,7 @@
         <!--android:layout_width="fill_parent"-->
         <!--android:layout_height="wrap_content">-->
 
-        <!--<TextView-->
-            <!--android:id="@+id/txtPrice"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="1dp"-->
-            <!--android:textSize="16sp"-->
-            <!--android:textColor="#a5a5a5"-->
-            <!--android:textStyle="italic"-->
-            <!--android:layout_alignParentStart="true" />-->
+
 
         <!--<TextView-->
             <!--android:id="@+id/txtDiscountDesc"-->
