--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -12,4 +12,8 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="DefaultActivity">
+        <item name="android:background">@drawable/snow_texture</item>
+    </style>
+
 </resources>
